Apply PR review feedback: fix OSGi service leaks, global Authenticator, improve tests
- Remove unused configureProxy() from ProxyUtil (JVM-wide System property side effects)
- Replace Authenticator.setDefault() with per-connection HttpURLConnection.setAuthenticator()
  in UrlDownloader and AbstractSourceCodeFinder (proxy + server auth combined in one authenticator)
- Fix OSGi IProxyService leak in UrlDownloader: remove local getProxyService() that called
  getService() without ungetService(); use SourceAttachPlugin.getDefault().getProxyService() instead
- Fix same OSGi leak in AbstractSourceCodeFinder
- Add ServiceTracker<IProxyService> to SourceAttachPlugin, opened in start(), closed in stop()
- Improve ProxyUtilTest with 7 tests using stub IProxyService/IProxyData: verify host/port,
  SOCKS exclusion, credential retrieval, and absence of global Authenticator.setDefault() side effect
- Add org.eclipse.core.net to test bundle MANIFEST.MF for IProxyService/IProxyData access

Agent-Logs-Url: https://github.com/nbauma109/ecd/sessions/7d3185f3-de5d-4363-835c-d0e444e83f91

Co-authored-by: nbauma109 <9403560+nbauma109@users.noreply.github.com>